--- a/mod/exit-music.html
+++ b/mod/exit-music.html
@@ -169,7 +169,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     
                     <div class="row">
                         <div class="column">
-                            <iframe width="100%" src="https://www.youtube.com/embed/yCBiFjF3mWg" 
+                            <iframe width="1366" height="635" src="https://www.youtube.com/embed/yCBiFjF3mWg" 
                             title="Doki Doki Exit Music - El mod que deprimió a más de uno" frameborder="0" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
