--- a/mod/exit-music.html
+++ b/mod/exit-music.html
@@ -171,7 +171,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         
                         <div class="column">
                             <div class="video">
-                                <iframe width="1366" height="635" src="https://www.youtube.com/embed/yCBiFjF3mWg" 
+                                <iframe src="https://www.youtube.com/embed/yCBiFjF3mWg" 
                                 title="Doki Doki Exit Music - El mod que deprimió a más de uno" frameborder="0" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 allowfullscreen></iframe>
