--- a/mod/exit-music.html
+++ b/mod/exit-music.html
@@ -1,28 +1,4 @@
 
-
-<!--
------------------------------IMPORTANTE---------------------------------------------------------
-    Este archivo será el editable para cada mod que se agregue,
-    Para ello, solo duplique el archivo template.html y siga las instrucciones marcadas en este documento,
-    NOTA: ES IMPORTANTE QUE LOS NOMBRES DE ARCHIVOS SEAN TODAS EN MINUSCULAS Y CON GUIONES MEDIOS "-"
-            SOLO SI OCUPA HACER ESPACIO.
-        
-        RECOMENDACIÓN: DENTRO DE ESTE ARCHIVO, LOS ARCHIVOS QUE HAGAN REFERENCIAS A OTROS ARCHIVOS HTML 
-                        NO SE COLOQUE LA TERMINACIÓN .html, YA EL MISMO SERVER DETECTA QUE ES UN ARCHIVO HTML,
-                    * ESTO DEBIDO A QUE SE TRATA DE HACER LOS LINKS O URLS, LO MAS SENCILLO DE RECORDAR *
-    EJEMPLO:
-        En lugar de ser... https://www.dokidokispanish.club/mod/Exit-Music.html
-        sea...  https://www.dokidokispanish.club/mod/exit-music
-        ESTO HACE QUE SEA MAS FÁCIL DE RECORDAR PARA LOS USUARIOS
-    ADEMAS:
-        Solo Modificar las partes que vengan con estos indicadores <!- ->,
-        Por favor solo modificar lo que sea señalado, ya que si modifican lo demas,
-        es probable que se rompa el archivo.
-    NOTA:
-    Si tiene dudas, por favor contactar con algun otro editor o owner.
-AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODER REGISTRAR EL MOD QUE FUE AGREGADO
---------------------------------------------------------------------------------------------------
--->
 <!DOCTYPE html>
 <html data-colores="default" lang="es">
 <head>
@@ -171,7 +147,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         
                         <div class="column">
                             <div class="video">
-                                <iframe width="100%" src="https://www.youtube.com/embed/yCBiFjF3mWg" 
+                                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/yCBiFjF3mWg" 
                                 title="Doki Doki Exit Music - El mod que deprimió a más de uno" frameborder="0" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 allowfullscreen></iframe>
