Data theme agregado

--- a/actualizaciones.html
+++ b/actualizaciones.html
@@ -14,7 +14,7 @@
 
 
     <script src="https://kit.fontawesome.com/69bbe484d6.js" crossorigin="anonymous"></script>
-    <title>Inicio - DDSC</title>
+    <title>Actualizaciones - DDSC</title>
 </head>
 <body >
     <header >
@@ -79,7 +79,7 @@
                 </p>
                 </div>
             </div>
-            <a href="index" class="btn-close-popup">X</a>
+            <a href="#" class="btn-close-popup">X</a>
         </div>
     </div>
     <div class="parallax" style="background-image: url(assets/gui/banner_inicio.jpg);">
