--- a/traducciones/pagina-1.html
+++ b/traducciones/pagina-1.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html data-colores="default" data-theme="light" lang="es">
+<html data-colores="default" lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="">
