--- a/traducciones/template.html
+++ b/traducciones/template.html
@@ -39,7 +39,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
 --------------------------------------------------------------------------------------------------
 -->
 <!DOCTYPE html>
-<html data-colores="default" data-theme="light" lang="es">
+<html data-colores="default"  lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="">
