--- a/mods-originales/pagina-1.html
+++ b/mods-originales/pagina-1.html
@@ -93,8 +93,11 @@
             <a href="pagina-1" class="btn-close-popup">X</a>
         </div>
     </div>
+    
     <div class="parallax" style="background-image: url(../assets/gui/banner_mods.jpg);">
-        
+        <div id="indicador_abajo">
+            <img id="icono_scroll" src="../assets/gui/icono_abajo.png" alt="">
+        </div>
         <div class="body_content">
             <hr>
             <div class="contenido" >
