--- a/mods-originales/pagina-2.html
+++ b/mods-originales/pagina-2.html
@@ -94,7 +94,9 @@
         </div>
     </div>
     <div class="parallax" style="background-image: url(../assets/gui/banner_mods.jpg);">
-        
+        <div id="indicador_abajo">
+            <img id="icono_scroll" src="../assets/gui/icono_abajo.png" alt="">
+        </div>
         <div class="body_content">
             <hr>
             <div class="contenido" >
